--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -9,7 +9,17 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        
+        const seconds = () =>{
+            setTimeout(()=>{
+                console.log('Async hey there');
+            }, 2000);
+        }
+        const first = () => {
+            console.log('Hey there');
+            second();
+            console.log('The end');
+        }
+        first();    
     </script>
 </body>
 </html>
