--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
+        /*
         const seconds = () =>{
             setTimeout(()=>{
                 console.log('Async hey there');
@@ -19,7 +20,34 @@
             second();
             console.log('The end');
         }
-        first();    
+        first();  */
+
+        function getRecipe(){
+            setTimeout(()=>{
+                const recipeId = [523, 883, 432, 974];
+                console.log(recipeId);
+
+                setTimeout((id)=>{
+                    const recipe = {
+                        title: 'fresh tomato pasta',
+                        publisher: 'jonas'
+                    };
+                    console.log(`${id}: ${recipe.title}`);
+
+                    setTimeout(publisher =>{
+                        const recipe2 = {
+                            title: 'italian pizza',
+                            publisher: 'jonas'
+                        };
+                        console.log(recipe2);
+                    }, 1500);
+
+                }, 1500, recipeId[2]);
+
+            }, 1500);
+        }
+        getRecipe();
+
     </script>
 </body>
 </html>
