--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -21,7 +21,7 @@
             console.log('The end');
         }
         first();  */
-
+        /*
         function getRecipe(){
             setTimeout(()=>{
                 const recipeId = [523, 883, 432, 974];
@@ -46,7 +46,52 @@
 
             }, 1500);
         }
-        getRecipe();
+        getRecipe(); */
+
+        const getIDs = new Promise((resolve, reject)=>{
+            setTimeout(()=>{
+                resolve([523, 883, 432, 974]);
+            }, 1500);
+        });
+
+        const getRecipe = recID =>{
+            return new Promise((resolve, reject) =>{
+                setTimeout(ID =>{
+                    const recipe = {
+                        title: 'fresh tomato pasta',
+                        publisher: 'jonas'
+                    };
+                    resolve(`${ID}: ${recipe.title}`);
+                }, 1500);
+            
+            });
+        };        const getRelated = publisher => {
+            return new Promise((resolve, reject) =>{
+                setTimeout(pub =>{
+                    const recipe = {
+                        title: 'italian pizza',
+                        publisher: 'jonas'
+                        };
+                    resolve(`${pub}: ${recipe.title}`);
+                }, 1500, publisher);
+            });
+        };
+
+        getIDs
+        .then(IDs =>{
+            console.log(IDs);
+            return getRecipe(IDs[2]);
+        })
+        .then(recipe => {
+            console.log(recipe);
+            return getRelated('jonas');
+        })
+        .then(recipe =>{
+            console.log(recipe);
+        })
+        .catch(error =>{
+            console.log('Error');
+        });
 
     </script>
 </body>
