--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -47,7 +47,7 @@
             }, 1500);
         }
         getRecipe(); */
-
+        /*
         const getIDs = new Promise((resolve, reject)=>{
             setTimeout(()=>{
                 resolve([523, 883, 432, 974]);
@@ -65,7 +65,8 @@
                 }, 1500);
             
             });
-        };        const getRelated = publisher => {
+        };        
+        const getRelated = publisher => {
             return new Promise((resolve, reject) =>{
                 setTimeout(pub =>{
                     const recipe = {
@@ -75,8 +76,8 @@
                     resolve(`${pub}: ${recipe.title}`);
                 }, 1500, publisher);
             });
-        };
-
+        }; */
+        /**
         getIDs
         .then(IDs =>{
             console.log(IDs);
@@ -91,6 +92,56 @@
         })
         .catch(error =>{
             console.log('Error');
+        }); **/
+        /*
+        async function getRecipesAW(){
+            const IDs = await getIDs();
+            console.log(IDs);
+            const recipe = await getRecipe(ID[2]);
+            console.log(recipe);
+            const related = await getRelated('jonas');
+            console.log(related);
+
+            return recipe;
+        }
+
+        getRecipesAW().then(result =>{
+            console.log(result + ' is the best ever.');
+        }); */
+        function getWeather(woeid){
+            fetch(`https://crossorigin.me/https://www.metaweather.com/api/location/${woeid}/`)
+            .then(result =>{
+                console.log(result);
+                return result.json();
+            })
+            .then(data =>{
+                const today = data.consolidated_weather[0];
+                console.log(`Temperature today in ${data.title} stay between ${today.min_temp} and ${today.max_temp}`);
+            })
+            .catch(error =>{
+                console.log(error);
+            });   
+        }     
+        //getWeather(2487956);
+        //getWeather(44418);
+
+
+        async function getWeatherAW(woeid){
+            try{
+                const result = await fetch(`https://crossorigin.me/https://www.metaweather.com/api/location/${woeid}/`);
+                const data = await result.json();
+                const tomorrow = data.consolidated_weather[1];
+                console.log(`Temperatures tomorrow in ${data.title} stay between ${tomorrow.min_temp} and ${tomorrow.max_temp}`);
+                return data;
+            } catch(error){
+                console.log(error);
+            }
+            
+        }
+        let dataLondon;
+        getWeatherAW(2487956).then(data =>{
+            dataLondon = data;
+            console.log(dataLondon);
         });
 
     </script>
